--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
+    "create": "^0.5.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
@@ -32,7 +33,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.3.2"
+    "vite": "^6.3.3"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
