--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
@@ -22,7 +24,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
