--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -19,6 +19,7 @@
     "create": "^0.5.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "framer-motion": "^12.9.4",
     "mysql2": "^3.14.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
