--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "create": "^0.5.5",
     "dotenv": "^16.4.7",
+    "eslint-import-resolver-typescript": "^4.3.4",
     "express": "^4.21.2",
     "framer-motion": "^12.9.4",
     "mysql2": "^3.14.0",
