--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -21,6 +21,7 @@
     "eslint-import-resolver-typescript": "^4.3.4",
     "express": "^4.21.2",
     "framer-motion": "^12.9.4",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
