--- a/cripto-react/.gitignore
+++ b/cripto-react/.gitignore
@@ -1,5 +1,4 @@
-
- Logs
+# Logs
 logs
 *.log
 npm-debug.log*
@@ -8,12 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Diretórios de build/compilação
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Arquivos de editor
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -23,3 +23,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Arquivos de configuração do ambiente
+.env
