--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.1.2",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "create": "^0.5.5",
@@ -23,7 +24,7 @@
     "express": "^4.21.2",
     "framer-motion": "^12.9.4",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.0",
+    "mysql2": "^3.14.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
