--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "axios": "^1.8.4",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "chart.js": "^4.4.9",
