--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -32,6 +32,8 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "three": "^0.176.0"
   },
   "devDependencies": {
