--- a/cripto-react/package.json
+++ b/cripto-react/package.json
@@ -33,6 +33,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.0",
     "react-slick": "^0.30.3",
+    "remark-gfm": "^4.0.1",
     "slick-carousel": "^1.8.1",
     "three": "^0.176.0"
   },
